--- a/completions01.ipynb
+++ b/completions01.ipynb
@@ -40,20 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "言語モデルを使う上でのポイントは、長文を短文に分割し、長文を入力する際のメモリ性質を改善できることです。\n",
+      "言語モデルを使う上でのポイントは，\n",
+      "「どのニュースを使うか」にある．\n",
+      "単にニュースを多く使えば良いというわけではない．\n",
+      "例えば，あるランキングを形成する基準を，\n",
+      "ランキングに加えるニュースがどれも共通して満たすとして，\n",
+      "上位 4~\n",
+      "位までのニュースを使って 1~\n",
+      "位を予測する，というのが良い (参考文献~\\ref{list:gensim-news-crawl})．\n",
+      "過学習を防ぐ意味でも．\n",
       "\n",
-      "これは、短い文の方が長い文よりもトークン数が少ないため、モデルの入力データのサイズが小さくなることによって、メモリ使用量を減らすことができます。\n",
-      "\n",
-      "また、長文を短文に分割することで、モデルがより局所的な文脈を学習することができるようになります。これにより、入力文の論理性や文章の流れを考慮できるようになり、より自然な文章を生成することができます。\n",
-      "\n",
-      "さらに、モデルが短文によりよく適合するように、長文を分割する際には文の意味や文法的なつながりを損なわないように注意する必要があります。例えば、文の最後の\n"
+      "また，言語モデルを使う上での重要な点の1つが，\n",
+      "言語モデルは共起確率ではなく条件付き確率であるという具体例を挙げる (参考文献~\\ref{list:word-cooccur})．\n",
+      "単語共起を使った手法ではなく，単語の順序だけを使った手法として言語モデルがある．\n",
+      "言語モデルに平文で使える言語\n"
      ]
     }
    ],
@@ -83,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,14 +99,14 @@
      "text": [
       "、\n",
       "\n",
-      "1. データセットの質\n",
-      "言語モデルは、大量のテキストデータから学習するため、データセットの質が重要です。データセットは、文法的に正しい文や意味を持つ文で構成されていることが重要です。\n",
+      "1. データセットの準備\n",
+      "言語モデルの学習には、豊富な量のテキストデータが必要です。そのため、使いたい言語のデータセットを収集することが重要です。\n",
       "\n",
-      "2. データの前処理\n",
-      "データセットをモデルに入力する前に、テキストデータをトークン化し、特殊トークンを追加するなどの前処理を行う必要があります。また、データセットをモデルに入力する際には、学習に適した形式に変換することも重要です。\n",
+      "2. モデルの選択\n",
+      "言語モデルには、大きく分けて事前学習済みモデルと自作モデルの2つがあります。事前学習済みモデルは、すでに大量のテキストデータを用いて学習されたもので、自作モデルはデータセットを用いて学習することで作成されます。どちらを用いるかは、そのプロジェクトの目的やデータセットの規模などによって選択する必要があります。\n",
       "\n",
-      "3. ハイパーパラメータの調整\n",
-      "言語モデルには、学習率やバッチサイズなどのハイパーパラメータが存在します。これらの値を適切に調整することで、より良いモデルを作ることがで\n"
+      "3. データの前処理\n",
+      "言語モデルの学習には、データの前処理が重要です。不要な文字や単語\n"
      ]
     }
    ],
@@ -134,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,12 +149,12 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
-      "そもそも学習し直したモデルを使用する\n",
-      "\n",
-      "モデルの入力データとして、トークン化（トークナイズ）されたもの\n",
+      "、「大量のデータを使った学習をすること」です。  \n",
+      "この項目では、まず言語モデルを学習するための訓\n",
       "--------------------\n",
-      "、まずモデルにテキストを入力すると、\n",
-      "それを数値データに変換してそのまま順番に計算を行うことができ\n",
+      "、不自然な文章を使わないという点です。\n",
+      "\n",
+      "まず、ここで言う「不自然な文章」とは、人間の言葉で表すとどういった\n",
       "CompletionUsage(completion_tokens=100, prompt_tokens=17, total_tokens=117)\n"
      ]
     }
@@ -182,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,12 +197,14 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
-      "次の ２点となります。\n",
+      "、以下の3つです。\n",
       "\n",
-      "- トークン集合から文書を生成するように訓練された言語モデルのバリデーション\n",
+      "1. トークナイザ：文章を単語や文節に分割する。どのようなトークナイザを使うか\n",
       "--------------------\n",
-      "2つあります。\n",
-      "- 一つ目は、単語のインデックスを異なる値に設定し直して始める必要があることです。 言\n",
+      "2つ\n",
+      "\n",
+      "1つ目は「データセットを多くすること」である。\n",
+      "言語モデルの良い性能を得るためには、豊富で\n",
       "CompletionUsage(completion_tokens=200, prompt_tokens=17, total_tokens=217)\n"
      ]
     }
@@ -231,17 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "店長です。お問い合わせありがとうございます。是非サンプルでご覧いただくことができると嬉しいです。商品をお届けするためのご注文方法については、以下の通りです。\n",
-      "\n",
-      "1. 当店の商品ページから商品を選択してください。\n",
-      "商品ページから、ご希望の商品を選\n"
+      "稲崎です！ 先週までは天気も良いと思ったらまた雨で、寒かったのに今週の火曜日はずっと雨でドシャ降りの寒い一日になりました(;´∀｀)本当に突然。。。大量の雨が降りましたよね！！ 今\n"
      ]
     }
    ],
@@ -263,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 店 ] [ bytes:\\xe9\\x95 ] [ bytes:\\xb7 ] [ です ] [ 。 ] [ お ] [ 問 ] [ い ] [ 合 ] [ わ ] [ せ ] [ ありがとうござ ] [ います ] [ 。 ] [ 是 ] [ 非 ] [ サ ] [ ン ] [ プ ] [ ル ] [ で ] [ ご ] [ bytes:\\xe8\\xa6 ] [ bytes:\\xa7 ] [ い ] [ ただ ] [ く ] [ こ ] [ と ] [ が ] [ で ] [ き ] [ る ] [ と ] [ bytes:\\xe5 ] [ bytes:\\xac ] [ bytes:\\x89 ] [ し ] [ い ] [ です ] [ 。 ] [ 商品 ] [ を ] [ お ] [ bytes:\\xe5\\xb1 ] [ bytes:\\x8a ] [ け ] [ する ] [ た ] [ め ] [ の ] [ ご ] [ 注 ] [ 文 ] [ 方法 ] [ に ] [ つ ] [ い ] [ て ] [ は ] [ 、 ] [ 以下 ] [ の ] [ 通 ] [ り ] [ です ] [ 。 ] [ 1 ] [ . ] [  当 ] [ 店 ] [ の ] [ 商品 ] [ ペ ] [ ージ ] [ から ] [ 商品 ] [ を ] [ bytes:\\xe9\\x81 ] [ bytes:\\xb8 ] [ bytes:\\xe6\\x8a ] [ bytes:\\x9e ] [ して ] [ ください ] [ 。 ] [ 商品 ] [ ペ ] [ ージ ] [ から ] [ 、 ] [ ご ] [ bytes:\\xe5\\xb8 ] [ bytes:\\x8c ] [ bytes:\\xe6\\x9c ] [ bytes:\\x9b ] [ の ] [ 商品 ] [ を ] [ bytes:\\xe9\\x81 ] [ bytes:\\xb8 ] "
+      "[ bytes:\\xe7\\xa8 ] [ bytes:\\xb2 ] [ bytes:\\xe5 ] [ bytes:\\xb4 ] [ bytes:\\x8e ] [ です ] [ ！ ] [ bytes: \\xe5\\x85 ] [ bytes:\\x88 ] [ bytes:\\xe9\\x80 ] [ bytes:\\xb1 ] [ ま ] [ では ] [ 天 ] [ 気 ] [ も ] [ bytes:\\xe8\\x89 ] [ bytes:\\xaf ] [ い ] [ と ] [ 思 ] [ っ ] [ た ] [ ら ] [ また ] [ bytes:\\xe9\\x9b ] [ bytes:\\xa8 ] [ で ] [ 、 ] [ bytes:\\xe5\\xaf ] [ bytes:\\x92 ] [ か ] [ っ ] [ た ] [ の ] [ に ] [ 今 ] [ bytes:\\xe9\\x80 ] [ bytes:\\xb1 ] [ の ] [ 火 ] [ bytes:\\xe6\\x9b ] [ bytes:\\x9c ] [ 日 ] [ は ] [ bytes:\\xe3\\x81 ] [ bytes:\\x9a ] [ っ ] [ と ] [ bytes:\\xe9\\x9b ] [ bytes:\\xa8 ] [ で ] [ ド ] [ シ ] [ ャ ] [ bytes:\\xe9\\x99 ] [ bytes:\\x8d ] [ り ] [ の ] [ bytes:\\xe5\\xaf ] [ bytes:\\x92 ] [ い ] [ 一 ] [ 日 ] [ に ] [ な ] [ り ] [ ました ] [ (; ] [ ´ ] [ bytes:\\xe2\\x88 ] [ bytes:\\x80 ] [ bytes:\\xef\\xbd ] [ bytes:\\x80 ] [ ) ] [ 本 ] [ 当 ] [ に ] [ bytes:\\xe7\\xaa ] [ bytes:\\x81 ] [ 然 ] [ 。。 ] [ 。 ] [ 大 ] [ 量 ] [ の ] [ bytes:\\xe9\\x9b ] [ bytes:\\xa8 ] [ が ] [ bytes:\\xe9\\x99 ] [ bytes:\\x8d ] [ り ] [ ました ] [ よ ] [ bytes:\\xe3\\x81 ] [ bytes:\\xad ] [ ！！ ] [   ] [ 今 ] [ bytes:\\xe9\\x80 ] "
      ]
     }
    ],
@@ -295,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-7.94527, -0.06836766, -6.7901296e-05, -2.578664, -1.4273841]"
+       "[-9999.0, -0.36752188, -1.7257777, -4.484301, -5.419287e-05]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,24 +322,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'\\n': -1.2489457, '\\n\\n': -1.9408288, '私': -2.881209},\n",
-       " {'bytes:\\\\xe9\\\\x95': -0.06836766,\n",
-       "  'bytes:\\\\xe8\\\\x88': -3.5561988,\n",
-       "  'bytes:\\\\xe5\\\\x93': -4.3107667},\n",
-       " {'bytes:\\\\xb7': -6.7901296e-05,\n",
-       "  'bytes:\\\\xb7\\\\xe6\\\\x96\\\\xb0': -9.606803,\n",
-       "  'bytes:\\\\x87': -15.117227},\n",
-       " {'です': -2.578664, 'の': -0.14120212, 'bytes:\\\\xe5\\\\x85': -5.348876},\n",
-       " {'。': -1.4273841, '。\\n\\n': -1.107846, '！\\n\\n': -1.9637077}]"
+       "[{'\\n': -1.2493514, '\\n\\n': -1.9412345, '私': -2.8816147},\n",
+       " {'bytes:\\\\xb2': -0.36752188,\n",
+       "  'bytes:\\\\xbc': -1.8853976,\n",
+       "  'bytes:\\\\xae': -2.3355508},\n",
+       " {'bytes:\\\\xe8': -1.6830589,\n",
+       "  'bytes:\\\\xe5': -1.7257777,\n",
+       "  'bytes:\\\\xe6\\\\x9d': -2.5654955},\n",
+       " {'bytes:\\\\x9e': -0.0988128,\n",
+       "  'bytes:\\\\xa6': -2.773198,\n",
+       "  'bytes:\\\\xb6': -4.2145944},\n",
+       " {'bytes:\\\\x8e': -5.419287e-05,\n",
+       "  'bytes:\\\\x87': -10.315457,\n",
+       "  'bytes:\\\\x97': -11.621781}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
