--- a/function01.ipynb
+++ b/function01.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,16 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-8eFSMwj1z1vRWYngA9mHaZCrUYTE1', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_FRP9itYx2vg5IuRqahUZRGkK', function=Function(arguments='{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}', name='get_search_result'), type='function')]))], created=1704603226, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_cbe4fa03fe', usage=CompletionUsage(completion_tokens=33, prompt_tokens=161, total_tokens=194))"
+       "ChatCompletion(id='chatcmpl-9GxrPGfv8PnpRb9jl8xa2erMtLqwa', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_PHRRqkCsvorw68TWO9O5xmcS', function=Function(arguments='{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}', name='get_search_result'), type='function')]))], created=1713830379, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_77a673219d', usage=CompletionUsage(completion_tokens=33, prompt_tokens=161, total_tokens=194))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "'{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,11 +169,10 @@
       "関数名：get_search_result\n",
       "引数：{'keyword': '東京駅のイベント', 'when': 1, 'unit': 'm'}\n",
       "関数の実行結果：{\"result\": [{\"title\": \"1914\\u5e74\\uff08\\u5927\\u6b633\\u5e74\\uff09\\u4e2d\\u592e\\u505c\\u8eca\\u5834\\u6539\\u3081\\u300c\\u6771\\u4eac\\u99c5\\u300d\\u3068\\u3057\\u3066\\u55b6\\u696d\\u3092\\u958b\\u59cb\\u3057\\u307e\\u3057\\u305f\"}, {\"title\": \"1929\\u5e74\\uff08\\u662d\\u548c4\\u5e74\\uff09\\u516b\\u91cd\\u6d32\\u53e3\\u304c\\u958b\\u8a2d\\u3055\\u308c\\u307e\\u3057\\u305f\"}, {\"title\": \"2014\\u5e74\\uff08\\u5e73\\u621026\\u5e74\\uff09\\u6771\\u4eac\\u99c5\\u958b\\u696d100\\u5468\\u5e74\\u3092\\u8fce\\u3048\\u307e\\u3057\\u305f\"}]}\n",
-      "最近1ヶ月以内の東京駅のイベントについての検索結果は以下のとおりです：\n",
-      "\n",
-      "1. 1914年（大正3年）中央停車場改め「東京駅」として営業を開始しました。\n",
-      "2. 1929年（昭和4年）八重洲口が開設されました。\n",
-      "3. 2014年（平成26年）東京駅開業100周年を迎えました。\n"
+      "最近1ヶ月以内の東京駅のイベント検索結果は以下の通りです。\n",
+      "1. 1914年(大正3年)中央停車場改め「東京駅」として業務を開始しました\n",
+      "2. 1929年(昭和4年)八重洲口が開設されました\n",
+      "3. 2014年(平成26年)東京駅開業100周年を迎えました\n"
      ]
     }
    ],
