--- a/function02.ipynb
+++ b/function02.ipynb
@@ -75,11 +75,11 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
+      "東京駅周辺・丸の内でおすすめのイベント｜レッツエンジョイ東京 東京駅周辺・丸の内でおすすめのイベント · かごしま遊楽館 / 千代田区立日比谷図書文化館 / 都立東綾瀬公園 / 楠木正成像 / 綾瀬駅（東京メトロ） / 日比谷駅（東京メトロ ...\n",
+      "--------------------\n",
       "東京キャラクターストリート特設 ｜ 東京駅一番街 東京キャラクターストリート内の「いちばんプラザ」やワゴンショップなど期間限定ショップやイベントも開催中！ いつも楽しいワクワクを集めてみなさまのお越しを ...\n",
       "--------------------\n",
-      "東京駅周辺・丸の内でおすすめのイベント｜レッツエンジョイ東京 東京駅周辺・丸の内でおすすめのイベント · 第1会場：日本橋三越本店 本館1階 中央ホール (天井絵展示会場) 2024年2月14日(水)～3月5日(火) □第2会場：日本橋三越本店 ...\n",
-      "--------------------\n",
-      "イベント&ニュース ｜ 東京駅一番街 イベント&ニュース · 「遊戯王5D's」 POPUP SHOP in 東京キャラクターストリート · レゴ®ストア · ケロロ軍曹 POP UP SHOP · 放送50周年記念アルプスの少女ハイジフェア.\n"
+      "東京駅(東京都)周辺のイベント｜ウォーカープラス 東京駅(東京都)周辺で開催されるイベント情報9件をお届けします。今日開催されているイベントはもちろん、週末の「どこ行こう」に役立つ情報が満載！\n"
      ]
     }
    ],
@@ -190,14 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,11 +199,12 @@
      "text": [
       "関数名：get_search_result\n",
       "引数：{'keyword': '東京駅 イベント', 'when': 1, 'unit': 'm'}\n",
-      "関数の実行結果：{\"result\": [{\"title\": \"\\u6771\\u4eac\\u30ad\\u30e3\\u30e9\\u30af\\u30bf\\u30fc\\u30b9\\u30c8\\u30ea\\u30fc\\u30c8\\u7279\\u8a2d \\uff5c \\u6771\\u4eac\\u99c5\\u4e00\\u756a\\u8857 \\u6771\\u4eac\\u30ad\\u30e3\\u30e9\\u30af\\u30bf\\u30fc\\u30b9\\u30c8\\u30ea\\u30fc\\u30c8\\u5185\\u306e\\u300c\\u3044\\u3061\\u3070\\u3093\\u30d7\\u30e9\\u30b6\\u300d\\u3084\\u30ef\\u30b4\\u30f3\\u30b7\\u30e7\\u30c3\\u30d7\\u306a\\u3069\\u671f\\u9593\\u9650\\u5b9a\\u30b7\\u30e7\\u30c3\\u30d7\\u3084\\u30a4\\u30d9\\u30f3\\u30c8\\u3082\\u958b\\u50ac\\u4e2d\\uff01 \\u3044\\u3064\\u3082\\u697d\\u3057\\u3044\\u30ef\\u30af\\u30ef\\u30af\\u3092\\u96c6\\u3081\\u3066\\u307f\\u306a\\u3055\\u307e\\u306e\\u304a\\u8d8a\\u3057\\u3092\\u00a0...\"}, {\"title\": \"\\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8\\uff5c\\u30ec\\u30c3\\u30c4\\u30a8\\u30f3\\u30b8\\u30e7\\u30a4\\u6771\\u4eac \\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8 \\u00b7 \\u7b2c1\\u4f1a\\u5834\\uff1a\\u65e5\\u672c\\u6a4b\\u4e09\\u8d8a\\u672c\\u5e97 \\u672c\\u99281\\u968e \\u4e2d\\u592e\\u30db\\u30fc\\u30eb (\\u5929\\u4e95\\u7d75\\u5c55\\u793a\\u4f1a\\u5834) 2024\\u5e742\\u670814\\u65e5(\\u6c34)\\uff5e3\\u67085\\u65e5(\\u706b) \\u25a1\\u7b2c2\\u4f1a\\u5834\\uff1a\\u65e5\\u672c\\u6a4b\\u4e09\\u8d8a\\u672c\\u5e97\\u00a0...\"}, {\"title\": \"\\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\uff5c \\u6771\\u4eac\\u99c5\\u4e00\\u756a\\u8857 \\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\u00b7 \\u300c\\u904a\\u622f\\u738b5D's\\u300d POPUP SHOP in \\u6771\\u4eac\\u30ad\\u30e3\\u30e9\\u30af\\u30bf\\u30fc\\u30b9\\u30c8\\u30ea\\u30fc\\u30c8 \\u00b7 \\u30ec\\u30b4\\u00ae\\u30b9\\u30c8\\u30a2 \\u00b7 \\u30b1\\u30ed\\u30ed\\u8ecd\\u66f9 POP UP SHOP \\u00b7 \\u653e\\u900150\\u5468\\u5e74\\u8a18\\u5ff5\\u30a2\\u30eb\\u30d7\\u30b9\\u306e\\u5c11\\u5973\\u30cf\\u30a4\\u30b8\\u30d5\\u30a7\\u30a2.\"}]}\n",
-      "最近1ヶ月以内の東京駅でのイベントについての検索結果は以下の通りです：\n",
-      "1. 東京駅一番街東京キャラクターストリート内の「いちばんプラザ」やワゴンショップなどの期間限定ショップやイベントが開催中。\n",
-      "2. レッツエンジョイ東京│東京駅周辺でおすすめのイベントや場所を紹介するイベントが開催中。\n",
-      "3. イベント＆ニュース│東京駅一番街イベント＆ニュース｜「遊戯王5D's」POPUP SHOP in 東京駅キャラクターストリートや「レゴ®ストア」、ケロロ軍曹POP UP SHOP、放送50周年記念アルプスの少女ハイジの少女ハイジの5D's。\n"
+      "関数の実行結果：{\"result\": [{\"title\": \"\\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8\\uff5c\\u30ec\\u30c3\\u30c4\\u30a8\\u30f3\\u30b8\\u30e7\\u30a4\\u6771\\u4eac \\u6771\\u4eac\\u99c5\\u5468\\u8fba\\u30fb\\u4e38\\u306e\\u5185\\u3067\\u304a\\u3059\\u3059\\u3081\\u306e\\u30a4\\u30d9\\u30f3\\u30c8 \\u00b7 \\u304b\\u3054\\u3057\\u307e\\u904a\\u697d\\u9928 / \\u5343\\u4ee3\\u7530\\u533a\\u7acb\\u65e5\\u6bd4\\u8c37\\u56f3\\u66f8\\u6587\\u5316\\u9928 / \\u90fd\\u7acb\\u6771\\u7dbe\\u702c\\u516c\\u5712 / \\u6960\\u6728\\u6b63\\u6210\\u50cf / \\u7dbe\\u702c\\u99c5\\uff08\\u6771\\u4eac\\u30e1\\u30c8\\u30ed\\uff09 / \\u65e5\\u6bd4\\u8c37\\u99c5\\uff08\\u6771\\u4eac\\u30e1\\u30c8\\u30ed\\u00a0...\"}, {\"title\": \"\\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\uff5c \\u6771\\u4eac\\u99c5\\u4e00\\u756a\\u8857 \\u30a4\\u30d9\\u30f3\\u30c8&\\u30cb\\u30e5\\u30fc\\u30b9 \\u00b7 New! \\u30a6\\u30eb\\u30c8\\u30e9\\u30de\\u30f3\\u30ef\\u30fc\\u30eb\\u30c9M78 \\u30b9\\u30da\\u30b7\\u30e3\\u30eb\\u7f36\\u30d0\\u30c3\\u30b8\\u30d7\\u30ec\\u30bc\\u30f3\\u30c8\\u30ad\\u30e3\\u30da\\u30fc\\u30f3 \\u00b7 New! \\u00b7 MINECRAFT POP UP STORE \\u00b7 \\u5c71\\u30ce\\u30c1\\u30fc\\u30ba \\u00b7 \\u300c\\u5200\\u5263\\u4e71\\u821e\\u300d POPUP SHOP\\u00a0...\"}, {\"title\": \"\\u5927\\u4e38\\u6771\\u4eac\\u5e97 \\u3008\\u6771\\u4eac\\u3070\\u306a\\u5948STUDIO\\u30094\\u67083\\u65e5(\\u6c34)\\u304b\\u3089\\u306e\\u958b\\u5e97\\u524d\\u304a\\u4e26\\u3073\\u5217\\u3054\\u6848\\u5185 \\u00b7 \\u6771\\u4eac\\u99c5\\u516b\\u91cd\\u6d32\\u30d1\\u30fc\\u30ad\\u30f3\\u30b0\\u897f\\u99d0\\u8eca\\u5834\\u30fb\\u6771\\u99d0\\u8eca\\u5834\\u306b\\u304a\\u3051\\u308b\\u304a\\u8cb7\\u3044\\u3042\\u3052\\u30b5\\u30fc\\u30d3\\u30b9\\u306e\\u3054\\u6848\\u5185 \\u00b7 \\u5927\\u4e38\\u30fb\\u677e\\u5742\\u5c4b\\u30a2\\u30d7\\u30ea\\u00a0...\"}]}\n",
+      "最近1ヶ月以内の東京駅周辺のイベントについての検索結果は以下の通りです。\n",
+      "\n",
+      "1. 東京駅周辺で開催されるイベントの情報が掲載されています。 \n",
+      "2. 東京駅一番街にて、ウルトラマンワールドM78、スペシャル缶バッジプレゼントキャンペーン、MINECRAFT POP UP STORE、山の茶屋などのイベントが開催されています。 \n",
+      "3. 東京駅八重洲口や東京駅新幹線プラットホームでのお買い物をご案内するお知らせです。\n"
      ]
     }
    ],
@@ -268,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,11 +305,11 @@
      "output_type": "stream",
      "text": [
       "--------------------\n",
-      "「たべっ子どうぶつ」のお祭りイベント、奈良・イオンモール橿原 ...\n",
+      "「Happy Holi！」NYに春の訪れを告げるお祭り\n",
       "--------------------\n",
-      "弟は「型抜き」で散財。一方、姉は…？お祭りから見る姉弟の違い ...\n",
+      "祭りで企業や商品をPR｜株式会社オマツリジャパン\n",
       "--------------------\n",
-      "初戦敗退の誠信、最後まで笑顔の『お祭りバレー』体現 セッター ...\n"
+      "ふれあい中央 カーニバル（神戸市中央区のお祭り） - はぎわら泰三（ハギワラタイゾウ） ｜ 選挙ドットコム\n"
      ]
     }
    ],
@@ -330,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,9 +387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletion(id='chatcmpl-9GyoKYwwKiOqjJfoRCA6Ji7pfGaeH', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_CQhEIvDHXxffGgzDF8fObvLy', function=Function(arguments='{\"keyword\":\"お祭り\",\"when\":5,\"unit\":\"d\"}', name='get_news'), type='function')]))], created=1713834032, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_77a673219d', usage=CompletionUsage(completion_tokens=25, prompt_tokens=187, total_tokens=212))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# question = \"東京駅のイベントについて、最近1ヶ月以内の検索結果を教えてください\"\n",
     "question = \"お祭りに関する5日以内のニュースを教えてください\"\n",
@@ -407,7 +412,8 @@
     "    ],\n",
     "    tools=tools,\n",
     "    tool_choice=\"auto\",\n",
-    ")"
+    ")\n",
+    "response"
    ]
   },
   {
@@ -452,18 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "お祭りに関する5日以内のニュースです。\n",
+      "最新のお祭りに関するニュースは以下の通りです。\n",
       "\n",
-      "1. 「たべっ子どうぶつ」のお祭りイベント、岩見沢市・イオンモール八雲店 ...\n",
-      "2. 兄弟は「型抜き」で散財。一方、姉は…？お祭りから見る姉弟の違い ...\n",
-      "3. 初戦敗退の誤信、最後まで笑顔の「お祭りバレー」体現　セッター誤信は「 ...\n"
+      "1. 「Happy Holi！」NYに春の訪れを告げるお祭り\n",
+      "2. お祭りで企業や商品をPR｜株式会社オマツリジャパン\n",
+      "3. 仏街中央 カーニバル（神戸市中央区のお祭り） - はぎわ和三（ハギワラタイゾウ）｜選挙ドットコム\n"
      ]
     }
    ],
