--- a/langchain01.ipynb
+++ b/langchain01.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,11 +60,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "- 大規模なトレーニングデータを用意することで精度を向上させる\n",
-      "- ダイバーシティがある幅広い単語や表現を収集し、モデルに組み込むことでより自然な表現を生成する\n",
-      "- 単語や文章の出現頻度を考慮することで、コーパス内の単語間の結びつきを学習してより正確な予測を行う\n",
-      "- 文脈を考慮し、単語や文章の出現頻度だけではなく、前後にくる単語や文章も学習することで、より文脈に即した表現を生成する\n",
-      "- 潜在的な意味や文法的な規則などの知識を獲得するために、機械学習アルゴリズムを採用することでより高度な言語モデルを構築する\n"
+      "\n",
+      "1. データセットの選択: 言語モデルを訓\n"
      ]
     }
    ],
@@ -88,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,19 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='1. データの品質向上: 言語モデルを構築するためには大規模なデータセットが必要です。そのため、データの収集からクリーニングまで、データの品質を向上させることが重要です。\\n\\n2. ハイパーパラメータの適切な設定: 言語モデルには複数のハイパーパラメータが存在し、それらの適切な設定が重要です。適切なハイパーパラメータを探索するためには、実験を重ねる必要があります。\\n\\n3. モデルの評価: 言語モデルの品質は正確な評価が必要です。適切な評価指標を選択し、実際の応用環境におけるモデルの性能を適切に評価することが重要です。\\n\\n4. パフォ'\n"
+      "content='言語モデルを使用する際にはいくつかのポイントに注意する必要があります。以下にそのポイントをいくつか紹介します。\\n\\n1. データの品質：良質なデータセットを使用することが重要です。言語モデルのパフォーマンスは、使用されるデータの量と品質に大きく依存します。\\n\\n2. ランゲージの選択：特定のプロジェクトやアプリケーションに適した言語モデルを選択することが重要です。一般的な言語モデルと、特定のドメインやタスクに特化した言語モデルとの違いを理解することが重要です。\\n\\n3. ハイパーパラメータのチューニング：言語モデルを訓練する際には、適切なハイパーパラメータを選択してパフォーマンスを最適化する必要があり' response_metadata={'token_usage': {'completion_tokens': 300, 'prompt_tokens': 25, 'total_tokens': 325}, 'model_name': 'gpt-3.5-turbo-1106', 'system_fingerprint': 'fp_77a673219d', 'finish_reason': 'length', 'logprobs': None} id='run-021591b3-75cb-435b-a023-0c267cd69323-0'\n"
      ]
     }
    ],
    "source": [
-    "from langchain.schema import HumanMessage\n",
+    "from langchain_core.messages import HumanMessage\n",
     "\n",
     "# 質問の設定\n",
     "text = \"言語モデルを使う上でのポイントは？\"\n",
@@ -132,20 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. データの品質向上: 言語モデルを構築するためには大規模なデータセットが必要です。そのため、データの収集からクリーニングまで、データの品質を向上させることが重要です。\n",
+      "言語モデルを使用する際にはいくつかのポイントに注意する必要があります。以下にそのポイントをいくつか紹介します。\n",
       "\n",
-      "2. ハイパーパラメータの適切な設定: 言語モデルには複数のハイパーパラメータが存在し、それらの適切な設定が重要です。適切なハイパーパラメータを探索するためには、実験を重ねる必要があります。\n",
+      "1. データの品質：良質なデータセットを使用することが重要です。言語モデルのパフォーマンスは、使用されるデータの量と品質に大きく依存します。\n",
       "\n",
-      "3. モデルの評価: 言語モデルの品質は正確な評価が必要です。適切な評価指標を選択し、実際の応用環境におけるモデルの性能を適切に評価することが重要です。\n",
+      "2. ランゲージの選択：特定のプロジェクトやアプリケーションに適した言語モデルを選択することが重要です。一般的な言語モデルと、特定のドメインやタスクに特化した言語モデルとの違いを理解することが重要です。\n",
       "\n",
-      "4. パフォ\n"
+      "3. ハイパーパラメータのチューニング：言語モデルを訓練する際には、適切なハイパーパラメータを選択してパフォーマンスを最適化する必要があり\n"
      ]
     }
    ],
@@ -163,19 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "昼飯なら、たこ焼きとお好み焼きがあんまりおすすめやねん。あとはホルモン焼きや串カツもええやろ。関西って美味しいもんいっぱいあるから迷うくらいやで。\n"
+      "おすすめの昼食は、たこ焼きやお好み焼き、うどんやラーメン、焼きそばやおにぎりなど、たくさんありますやん。んまいもん食べたらええで。\n"
      ]
     }
    ],
    "source": [
-    "from langchain.schema import HumanMessage, SystemMessage\n",
+    "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
     "# Systemメッセージ\n",
     "system_message = \"あなたは関西人です。大阪弁を使います。\"\n",
@@ -196,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "他にもおすすめとしましては、うどんやそうめんもええやろう。関西では美味しい和食や洋食もたくさんあるから、食べたいものに合わせて選ぶとええと思うで。\n"
+      "そうやなぁ、定番のお弁当やお寿司もおすすめやで。お弁当は手軽に食べられて、種類もたくさんあるから、好きなもんが選べるで。また、お寿司なら新鮮なネタと美味しい酢飯が最高やで。お腹いっぱい食べて、元気になってや～。\n"
      ]
     }
    ],
@@ -229,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,9 +242,7 @@
     }
    ],
    "source": [
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
-    "model_name = \"gpt-3.5-turbo-instruct\"\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "\n",
     "# プロンプトテンプレートの作成\n",
     "template = \"{subject}を勉強する方法をステップ・バイ・ステップで教えてください\"\n",
@@ -263,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -272,13 +267,14 @@
      "text": [
       "\n",
       "\n",
-      "ステップ1: 目標を設定する\n",
-      "まず最初に、英語を勉強する理由や目的を明確にしましょう。自分の英語のレベルを知り、どのように成長したいか、またはどの程度のレベルを目指すかを決めます。目標を明確にすることでモチベーションを持続させることができます。\n",
+      "ステップ1: 目的を明確にする\n",
+      "まず、なぜ英語を勉強するのか、どのようなレベルまで習得したいのかを明確にすることが重要です。具体的な目標を立てることで、効果的な勉強計画を立てることができます。\n",
       "\n",
-      "ステップ2: 日常的な学習環境を作る\n",
-      "英語を勉強するための環境を整えましょう。英語の本やオーディオブック、映画やテレビ番組などを使用して、身近な環境に英語を取り入れることが重要です。また、英語を話す機会を増やすために、英語クラスや英会話グループなどに参加することも良いでしょう。\n",
+      "ステップ2: 基礎的な文法を学ぶ\n",
+      "文法は英語学習の基礎となります。初心者の場合は、基本的な文法ルールや品詞、動詞の時制などを学びましょう。一般的な文法書やオンラインコース、動画などを参考にするとよいでしょう。\n",
       "\n",
-      "ステップ3:\n"
+      "ステップ3: 語彙を増やす\n",
+      "英語を上達させるには、多くの語彙を覚えることが必要です。Common wordsやAcademic wordsなど、よく使われる単語や必要な単語を定期的に\n"
      ]
     }
    ],
@@ -299,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +305,13 @@
        " HumanMessage(content='I love programming.')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.prompts.chat import ChatPromptTemplate\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
     "template = \"あなたは{input_language}から{output_language}に翻訳する優秀な翻訳家です。\"\n",
     "human_template = \"{text}\"\n",
@@ -332,14 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='プログラミングが大好きです。'\n"
+      "content='私はプログラミングが大好きです。' response_metadata={'token_usage': {'completion_tokens': 14, 'prompt_tokens': 48, 'total_tokens': 62}, 'model_name': 'gpt-3.5-turbo-1106', 'system_fingerprint': 'fp_b953e4de39', 'finish_reason': 'stop', 'logprobs': None} id='run-1d034251-e5a8-41fa-a7db-6a3028088c39-0'\n"
      ]
     }
    ],
@@ -360,11 +356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.output_parsers import CommaSeparatedListOutputParser\n",
+    "from langchain_core.output_parsers import CommaSeparatedListOutputParser\n",
     "\n",
     "# Output Parserの作成\n",
     "output_parser = CommaSeparatedListOutputParser()"
@@ -372,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +377,7 @@
      "text": [
       "\n",
       "\n",
-      "afoot,adult,amaze,appear,allow,t(this!),apple,arch,attack,all\n"
+      "aback,abandon,abbey,abcommon,abort,abmulbury,abnormal,abuse,abide,able\n"
      ]
     }
    ],
@@ -395,16 +391,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['afoot,adult,amaze,appear,allow,t(this!),apple,arch,attack,all']"
+       "['aback,abandon,abbey,abcommon,abort,abmulbury,abnormal,abuse,abide,able']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,13 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.prompts.few_shot import FewShotPromptTemplate\n",
-    "from langchain_core.prompts.prompt import PromptTemplate\n",
-    "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
+    "from langchain_core.prompts import FewShotPromptTemplate, PromptTemplate\n",
+    "from langchain_core.example_selectors import LengthBasedExampleSelector\n",
     "\n",
     "# 抽出元のリスト\n",
     "examples = [\n",
@@ -465,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +509,13 @@
     "# 結果を表示\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
