--- a/show_models.ipynb
+++ b/show_models.ipynb
@@ -25,7 +25,9 @@
     {
      "data": {
       "text/plain": [
-       "['gpt-3.5-turbo',\n",
+       "['ft:gpt-3.5-turbo-1106:personal::8eHyTOMW',\n",
+       " 'gpt-3.5-turbo',\n",
+       " 'gpt-3.5-turbo-0125',\n",
        " 'gpt-3.5-turbo-0301',\n",
        " 'gpt-3.5-turbo-0613',\n",
        " 'gpt-3.5-turbo-1106',\n",
@@ -34,14 +36,14 @@
        " 'gpt-3.5-turbo-instruct',\n",
        " 'gpt-3.5-turbo-instruct-0914',\n",
        " 'gpt-4',\n",
-       " 'gpt-4-0314',\n",
+       " 'gpt-4-0125-preview',\n",
        " 'gpt-4-0613',\n",
        " 'gpt-4-1106-preview',\n",
-       " 'gpt-4-vision-preview',\n",
-       " 'text-davinci-001',\n",
-       " 'text-davinci-002',\n",
-       " 'text-davinci-003',\n",
-       " 'text-davinci-edit-001']"
+       " 'gpt-4-1106-vision-preview',\n",
+       " 'gpt-4-turbo',\n",
+       " 'gpt-4-turbo-2024-04-09',\n",
+       " 'gpt-4-turbo-preview',\n",
+       " 'gpt-4-vision-preview']"
       ]
      },
      "execution_count": 2,
